# mev-tools-py

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yaml
examples/: sandwich_detection_demo.py
src/mev_tools_py/: __init__.py
src/mev_tools_py/dex/: __init__.py  base.py  enhanced.py  models.py  utils.py
src/mev_tools_py/dex/readers/: __init__.py  uniswap_v2.py  uniswap_v3.py
src/mev_tools_py/enrich/: transactions.py
src/mev_tools_py/mev_share/: bundles.py
src/mev_tools_py/oev/protocols/: __init__.py  aave_v3.py  base.py  euler_v1.py  euler_v2.py  morpho.py
src/mev_tools_py/sandwich/: __init__.py  analyzer.py  detector.py  models.py  utils.py
tests/dex/: test_models.py  test_utils.py
tests/enrich/: test_transactions.py
tests/integration/: README.md  __init__.py  conftest.py  test_oev_protocols.py
tests/integration/data/: known_liquidations.json
tests/mev_share/: test_bundles.py
tests/oev/protocols/: test_aave_v3.py  test_euler_v1.py  test_euler_v2.py  test_morpho.py
tests/sandwich/: __init__.py  test_models.py
